# Transcriptional_Decomposition

./: .gitignore  LICENSE  README.md  pyproject.toml
Benchmarking/: benchmarker.py  gmrf_samples.npz  sample_GMRFs.py  sample_obs.py
src/TranscriptDecomPy/: distributions_TD.py  inla_TD.py  utils.py
tests/: distributions_TD_test.py  inla_TD_test.py
