[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "TranscriptDecomPy"
version = "0.0.1"
authors = [
  { name="João Mendonça", email="joaopedro.de.mendonca@gmail.com" },
]
description = "A package to perform transcriptional decomposition"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/JP2511/Transcriptional_Decomposition"